feat: [김원기] 레디스 설정, 유저토큰 레디스저장 [SPP-10][SPP-11]

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -24,8 +24,8 @@ spring:
   cache:
     type: redis
 
-#  redis:
-#    host: 127.0.0.1
-#    port: 6379
-#    username: default
-#    password: eddi@123
+  redis:
+    host: 127.0.0.1
+    port: 6379
+    username: default
+    password: eddi@123
