--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,10 +76,13 @@ jobs:
             
             echo "pass backend docker-container"
             
-            docker login ghcr.io -u ${{ github.actor }} -p ${{secrets.GHCR_TOKEN}}
-            
+            echo ${{ secrets.GHCR_TOKEN }} | docker login ghcr.io -u ${{ github.repository_owner }} --password-stdin
+            docker pull ghcr.io/iknowca/kdt-study3:latest
+            echo ${{github.repository_owner }}
             docker image prune -f
             docker logout
+            
+            docker-compose up -d
               
               
               
