--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -25,7 +25,6 @@ spring:
     type: redis
 
   redis:
-    host: 127.0.0.1
+    host: http://localhost
     port: 6379
-    username: default
     password: eddi@123
